--- a/HMS/Web.config
+++ b/HMS/Web.config
@@ -23,7 +23,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51"/>
         <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1"/>
-      </dependentAssembly>      
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed"/>
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
@@ -68,4 +68,8 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="HMSConnectionString" connectionString="Data Source=KRISHNA-WINDOWS;Initial Catalog=dbHMS;Persist Security Info=True;User ID=sa;Password=dearsql"
+providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
